Allow setting the backend server URL on debug builds

--- a/student/src/main/AndroidManifest.xml
+++ b/student/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
             android:name=".ui.activities.LoginActivity"
             android:label="@string/title_activity_login"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ui.activities.IntroActivity"
+            android:theme="@style/AppTheme.Intro" />
     </application>
 
 </manifest>
