--- a/teacher/build.gradle
+++ b/teacher/build.gradle
@@ -36,5 +36,8 @@ dependencies {
 
     implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation 'com.heinrichreimersoftware:material-intro:1.6.2'
+    implementation('com.mikepenz:aboutlibraries:6.0.1@aar') {
+        transitive = true
+    }
 
 }
