[student|teacher] Handle a NullPointerException when server does not respond

--- a/teacher/src/main/AndroidManifest.xml
+++ b/teacher/src/main/AndroidManifest.xml
@@ -26,8 +26,7 @@
             android:name=".ui.activities.IntroActivity"
             android:theme="@style/AppTheme.Intro" />
         <activity android:name=".ui.activities.CreateCourseActivity"
-            android:parentActivityName=".ui.activities.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:parentActivityName=".ui.activities.MainActivity" />
     </application>
 
 </manifest>
