[student] Add CourseDetailActivity with enroll button Also added swipe-to-refresh to CourseListFragments, other minor UI tweaks

--- a/student/src/main/AndroidManifest.xml
+++ b/student/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
         <activity
             android:name=".ui.activities.IntroActivity"
             android:theme="@style/AppTheme.Intro" />
+        <activity
+            android:name=".ui.activities.CourseDetailActivity"
+            android:label="@string/course_details"
+            android:parentActivityName=".ui.activities.MainActivity" />
     </application>
 
 </manifest>
