[student] Implement video record and upload functionality

--- a/student/build.gradle
+++ b/student/build.gradle
@@ -41,5 +41,6 @@ dependencies {
     }
 
     implementation 'jp.co.recruit_mp:LightCalendarView:1.0.1'
+    implementation 'com.otaliastudios:cameraview:1.4.1'
 
 }
