--- a/student/src/main/AndroidManifest.xml
+++ b/student/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -30,6 +32,8 @@
             android:name=".ui.activities.CourseDetailActivity"
             android:label="@string/course_details"
             android:parentActivityName=".ui.activities.MainActivity" />
+        <activity android:name=".ui.activities.FaceRecordActivity"
+            android:theme="@style/AppTheme.Translucent" />
     </application>
 
 </manifest>
