--- a/teacher/build.gradle
+++ b/teacher/build.gradle
@@ -40,5 +40,7 @@ dependencies {
     implementation('com.mikepenz:aboutlibraries:6.0.1@aar') {
         transitive = true
     }
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
 
 }
+apply plugin: 'com.google.gms.google-services'
