--- a/teacher/src/main/AndroidManifest.xml
+++ b/teacher/src/main/AndroidManifest.xml
@@ -49,8 +49,15 @@
         <activity android:name=".ui.activities.StudentListActivity"
             android:label="@string/students"
             android:parentActivityName=".ui.activities.CourseDetailActivity" />
+
         <activity android:name=".ui.activities.LectureDetailActivity"
-            android:parentActivityName=".ui.activities.CourseDetailActivity"/>
+            android:parentActivityName=".ui.activities.CourseDetailActivity">
+            <intent-filter>
+                <action android:name="notification_click"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
