--- a/student/build.gradle
+++ b/student/build.gradle
@@ -40,7 +40,7 @@ dependencies {
         transitive = true
     }
 
-    implementation 'jp.co.recruit_mp:LightCalendarView:1.0.1'
+    implementation 'com.roomorama:caldroid:3.0.1'
     implementation 'com.otaliastudios:cameraview:1.4.1'
     implementation 'com.google.firebase:firebase-messaging:11.8.0'
 
