--- a/student/build.gradle
+++ b/student/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 
     implementation 'com.roomorama:caldroid:3.0.1'
     implementation 'com.otaliastudios:cameraview:1.4.1'
+    implementation 'com.github.lecho:hellocharts-android:v1.5.8'
     implementation 'com.google.firebase:firebase-messaging:11.8.0'
 
 }
