--- a/student/build.gradle
+++ b/student/build.gradle
@@ -23,6 +23,25 @@ android {
         enabled = true
     }
 
+    signingConfigs {
+        config {
+            keyAlias 'key0'
+            keyPassword 'codemonks@123'
+            storeFile file('../keystore.jks')
+            storePassword 'codemonks@123'
+        }
+    }
+
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
+        }
+        debug {
+            signingConfig signingConfigs.config
+        }
+    }
 }
 
 dependencies {
